Fix beep detection model path

--- a/scripts/beep.ini
+++ b/scripts/beep.ini
@@ -1,5 +1,5 @@
 [FLAGS]
-Model = /media/Windows/root/AusKidTalkv2/scripts/Model_0.jbl
+Model = scripts/Model_0.jbl
 Context = -2,-1,0,1,2
 FrameRate = 0.01
 WindowSize = 0.02
