--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-pandas==1.0.1
-matplotlib==3.1.2
-simplejson==3.16.0
-scipy==1.4.1
-numpy==1.18.1
-hmmlearn==0.2.2
-eyeD3==0.9.5
-pydub==0.24.0
-scikit_learn==0.23.2
-tqdm==4.46.0
-plotly==4.1.1
-mysql-connector-python==8.0.22
-numba==0.48.0
+pandas
+matplotlib
+simplejson
+scipy
+numpy
+hmmlearn
+eyeD3
+pydub
+scikit_learn
+tqdm
+plotly
+mysql-connector-python
+numba
 pyAudioAnalysis
+ibm_watson
+numba
+librosa
+google
+google-cloud
+google-cloud-speech
+google-cloud-storage
+boto3
